# facto

./: .gitignore  processors.md  pyproject.toml
doc/: design-evolution.md
references/devlog/: versioning.md
references/devlog/0.1.0/: cfg.md  scope.md  scope.sql  semantic-basic-block.md  sourcecode.sql
references/devlog/0.1.1/: schema-design.md  scope.md  scope.sql
references/devlog/0.1.2/: spec-exec-parts.md  spec-exec.sql
references/devlog/0.1.3/: MERGE
references/devlog/0.1.3a/: declaration-structures.md  implicit_rule.sql  import_control.sql  specification-semantics.md  use_association.sql
references/devlog/0.1.3b/: control-flow-and-name-binding.md  control-region.sql  exec-internal-design.md  execution-semantics.md  semantic-basic-block.sql
references/devlog/0.1.4/: MERGE  architecture.md  schema.sql
references/devlog/0.1.4a/: coordinate-system.md  declaration.sql  evolution.md  semantic-recovery.md
references/devlog/0.1.4b/: exec-coordinate-system.md  exec-evolution.md  exec-fact.sql  semantic-dimensions.md
references/devlog/0.1.5/: pipeline-design.md
references/devlog/0.1.6/: pipeline-orchestration.md  test-plan.md
references/devlog/0.1.7/: exec-audit.md  os-analogy.md  processors.md  schema.sql  spec-branch-redesign.md
src/facto/: __init__.py  parse_regions.py  parse_scopes.py  parse_source.py  partition_blocks.py  pipeline.py  schemas.py  segment_parts.py
tests/: conftest.py  test_parse_regions.py  test_parse_scopes.py  test_parse_source.py  test_partition_blocks.py  test_schemas.py  test_segment_parts.py
(+3 files in other folders)
