[project]
name = "facto"
version = "0.1.8"
description = "Structural fact extraction from Fortran source code into a coordinate system"
readme = "README.md"
authors = [
    { name = "Wanli-Wylie", email = "zhang.wl.earth@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fcst @ git+https://github.com/Wanli-Wylie/fcst.git",
    "pandas>=2.0",
    "pandera>=0.20",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/facto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
